Fix spacing

--- a/assets/css/general/basics.css
+++ b/assets/css/general/basics.css
@@ -90,11 +90,10 @@ blockquote:not([class]) {
     padding: 2rem 3rem;
     border-left: 5px solid var(--brand-color);
     color: var(--secondary-text-color);
-    font-size: 2.1rem;
-    line-height: 1.45;
+    font-size: 1.9rem;
+    line-height: 1.5;
     font-weight: 700;
     letter-spacing: -0.03rem;
-    text-align: center;
     background-color: var(--lighter-gray-color);
 }
 
